--- a/main.tex
+++ b/main.tex
@@ -12,15 +12,15 @@
 % TODO: change thesis information
 \newcommand*{\getUniversity}{Technische Universität München}
 \newcommand*{\getFaculty}{Informatics}
-\newcommand*{\getDegree}{Informatics}
+\newcommand*{\getDegree}{Information Systems}
 \newcommand*{\getSchool}{Computation, Information and Technology}
-\newcommand*{\getTitle}{Thesis title}
-\newcommand*{\getTitleGer}{Titel der Abschlussarbeit}
-\newcommand*{\getAuthor}{Author}
-\newcommand*{\getDoctype}{Bachelor's Thesis, Master's Thesis, \ldots}
+\newcommand*{\getTitle}{Visualization and statistical analysis of performance measurements of database systems}
+\newcommand*{\getTitleGer}{Visualisierung und statistische Aufbereitung von Performance Messungen von Datenbanksystemen}
+\newcommand*{\getAuthor}{Julian Macias De La Rosa}
+\newcommand*{\getDoctype}{Master's Thesis}
 \newcommand*{\getSupervisor}{Supervisor}
-\newcommand*{\getAdvisor}{Advisor}
-\newcommand*{\getSubmissionDate}{Submission date}
+\newcommand*{\getAdvisor}{Maximilian Bandle}
+\newcommand*{\getSubmissionDate}{20.08.2023}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \begin{document}
@@ -43,7 +43,9 @@
 \mainmatter{}
 
 \input{chapters/01_introduction}
-% TODO: add more chapters here
+% TODO: add more chapters here 
+\input{chapters/02_related-work}
+\input{chapters/xx_example}
 
 \appendix{}
 
