--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,3 +5,32 @@
   author = {Leslie Lamport}
 }
 
+@inproceedings{profiling-dataflow,
+author = {Beischl, Alexander and Kersten, Timo and Bandle, Maximilian and Giceva, Jana and Neumann, Thomas},
+year = {2021},
+month = {04},
+pages = {474-489},
+title = {Profiling dataflow systems on multiple abstraction levels},
+doi = {10.1145/3447786.3456254}
+}
+
+@inproceedings {eurovisstar,
+booktitle = {EuroVis - STARs},
+editor = {R. Borgo and R. Maciejewski and I. Viola},
+title = {{State of the Art of Performance Visualization}},
+author = {Isaacs, Katherine E. and Giménez, Alfredo and Jusufi, Ilir and Gamblin, Todd and Bhatele, Abhinav and Schulz, Martin and Hamann, Bernd and Bremer, Peer-Timo},
+year = {2014},
+publisher = {The Eurographics Association},
+ISBN = {978-3-03868-028-4},
+DOI = {10.2312/eurovisstar.20141177}
+}
+
+@ARTICLE{2022state-of-the-art-visualization,
+  author={Shakeel, Hafiz Muhammad and Iram, Shamaila and Al-Aqrabi, Hussain and Alsboui, Tariq and Hill, Richard},
+  journal={IEEE Access}, 
+  title={A Comprehensive State-of-the-Art Survey on Data Visualization Tools: Research Developments, Challenges and Future Domain Specific Visualization Framework}, 
+  year={2022},
+  volume={10},
+  number={},
+  pages={96581-96601},
+  doi={10.1109/ACCESS.2022.3205115}}
