--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,8 @@
 \newcommand*{\getSubmissionDate}{20.08.2023}
 \newcommand*{\getSubmissionLocation}{Munich}
 
+\usepackage{graphicx}
+
 \begin{document}
 
 % Set page numbering to avoid "destination with the same identifier has been already used" warning for cover page.
@@ -45,6 +47,7 @@
 \input{chapters/01_introduction}
 % TODO: add more chapters here 
 \input{chapters/02_related-work}
+\input{chapters/03_theoretical-foundations}
 \input{chapters/xx_example}
 
 \appendix{}
