--- a/main.tex
+++ b/main.tex
@@ -18,9 +18,9 @@
 \newcommand*{\getTitleGer}{Visualisierung und statistische Aufbereitung von Performance Messungen von Datenbanksystemen}
 \newcommand*{\getAuthor}{Julian Macias De La Rosa}
 \newcommand*{\getDoctype}{Master's Thesis}
-\newcommand*{\getSupervisor}{Supervisor}
+\newcommand*{\getSupervisor}{Prof. Thomas Neumann}
 \newcommand*{\getAdvisor}{Maximilian Bandle}
-\newcommand*{\getSubmissionDate}{20.08.2023}
+\newcommand*{\getSubmissionDate}{20.10.2023}
 \newcommand*{\getSubmissionLocation}{Munich}
 
 \usepackage{graphicx}
