--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,3 +34,20 @@ DOI = {10.2312/eurovisstar.20141177}
   number={},
   pages={96581-96601},
   doi={10.1109/ACCESS.2022.3205115}}
+
+@article{Bringin-Compiling-Databases-to-RISC,
+  author = {Gruber, Ferdinand and Bandle, Maximilian and Engelke, Alexis and Neumann, Thomas and Giceva, Jana},
+  title = {Bringing Compiling Databases to RISC Architectures},
+  year = {2023},
+  issue_date = {February 2023},
+  publisher = {VLDB Endowment},
+  volume = {16},
+  number = {6},
+  issn = {2150-8097},
+  url = {https://doi.org/10.14778/3583140.3583142},
+  doi = {10.14778/3583140.3583142},
+  journal = {Proc. VLDB Endow.},
+  month = {apr},
+  pages = {1222–1234},
+  numpages = {13}
+}
