--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,9 @@
 % TODO: add more chapters here 
 \input{chapters/02_related-work}
 \input{chapters/03_theoretical-foundations}
+\input{chapters/04_implementation.tex}
+\input{chapters/05_discussion.tex}
+\input{chapters/06_conclusion.tex}
 \input{chapters/xx_example}
 
 \appendix{}
