Add section Overall Project Structure

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -51,3 +51,39 @@ DOI = {10.2312/eurovisstar.20141177}
   pages = {1222–1234},
   numpages = {13}
 }
+
+@online{reactstrictmode,
+  title = {React Strict Mode},
+  year = {2023},
+  url = {https://react.dev/learn/keeping-components-pure#detecting-impure-calculations-with-strict-mode},
+  note = {Online; accessed on 17-November-2023},
+}
+
+@online{react-router,
+  title = {React Router},
+  year = {2023},
+  url = {https://reactrouter.com/en/main},
+  note = {Online; accessed on 18-November-2023},
+  author = {Remix Software Inc.},
+}
+
+@online{Redux,
+  author = {Abramov, Clark},
+  title = {Redux},
+  year = {2023},
+  url = {https://redux.js.org/},
+  note = {Online; accessed on 17-November-2023}
+}
+@online{redux-toolkit,
+  author = {Abramov and the Redux Documentation Authors},
+  title = {Redux Toolkit},
+  year = {2023},
+  url = {https://redux-toolkit.js.org/},
+  note = {Online; accessed on 17-November-2023}
+}
+@online{mui,
+  title = {Material UI},
+  year = {2023},
+  url = {https://redux.js.org/},
+  note = {Online; accessed on 14-September-2023}
+}
