--- a/main.tex
+++ b/main.tex
@@ -45,14 +45,13 @@
 \mainmatter{}
 
 \input{chapters/01_introduction}
-% TODO: add more chapters here 
 \input{chapters/02_related-work}
 \input{chapters/03_theoretical-foundations}
 \input{chapters/04_1_implementation.tex}
 \input{chapters/04_2_implementation.tex}
 \input{chapters/05_discussion.tex}
 \input{chapters/06_conclusion.tex}
-\input{chapters/xx_example}
+% \input{chapters/xx_example}
 
 \appendix{}
 
