change to american english

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \newcommand*{\getFaculty}{Informatics}
 \newcommand*{\getDegree}{Information Systems}
 \newcommand*{\getSchool}{Computation, Information and Technology}
-\newcommand*{\getTitle}{Visualisation and statistical analysis of performance measurements of database systems}
+\newcommand*{\getTitle}{Visualization and statistical analysis of performance measurements of database systems}
 \newcommand*{\getTitleGer}{Visualisierung und statistische Aufbereitung von Performance Messungen von Datenbanksystemen}
 \newcommand*{\getAuthor}{Julian Macias De La Rosa}
 \newcommand*{\getDoctype}{Master's Thesis}
