Add section Query Plan

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -84,6 +84,13 @@ DOI = {10.2312/eurovisstar.20141177}
 @online{mui,
   title = {Material UI},
   year = {2023},
-  url = {https://redux.js.org/},
+  url = {https://mui.com/},
   note = {Online; accessed on 14-September-2023}
+}
+
+@online{semantic-diff,
+  title = {Semantic Diff / Query Plan Visualizer},
+  year = {2023},
+  url = {https://github.com/Toemmsche/semantic-diff},
+  note = {Online; accessed on 19-November-2023}
 }
