Add section Integration of Plotly

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -94,3 +94,25 @@ DOI = {10.2312/eurovisstar.20141177}
   url = {https://github.com/Toemmsche/semantic-diff},
   note = {Online; accessed on 19-November-2023}
 }
+
+@online{plotly,
+  title = {Plotly Open Source Graphing Libraries},
+  year = {2023},
+  url = {https://plotly.com/graphing-libraries/},
+  note = {Online; accessed on 20-November-2023}
+}
+
+@online{plotly-js,
+  title = {Plotly JavaScript Open Source Graphing Library},
+  year = {2023},
+  url = {https://plotly.com/javascript/},
+  note = {Online; accessed on 20-November-2023}
+}
+
+@online{createContext,
+  title = {createContext API},
+  year = {2023},
+  url = {https://react.dev/reference/react/createContext},
+  note = {Online; accessed on 20-November-2023}
+}
+
