General Improvements/ Corrections

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -88,6 +88,14 @@ DOI = {10.2312/eurovisstar.20141177}
   note = {Online; accessed on 14-September-2023}
 }
 
+@online{material-design,
+  title = {Material Design},
+  year = {2023},
+  url = {https://m3.material.io/},
+  note = {Online; accessed on 22-November-2023}
+}
+
+
 @online{semantic-diff,
   title = {Semantic Diff / Query Plan Visualizer},
   year = {2023},
@@ -115,4 +123,13 @@ DOI = {10.2312/eurovisstar.20141177}
   url = {https://react.dev/reference/react/createContext},
   note = {Online; accessed on 20-November-2023}
 }
+
+@online{roboto,
+  title = {Roboto Font},
+  author = {Google},
+  year = {2023},
+  url = {https://fonts.google.com/specimen/Roboto},
+  note = {Online; accessed on 22-November-2023}
+}
+
 
