Add section Integration of the Query Plan Visualizer

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -132,4 +132,26 @@ DOI = {10.2312/eurovisstar.20141177}
   note = {Online; accessed on 22-November-2023}
 }
 
+@online{react-sweet-state,
+  title = {React Sweet State},
+  year = {2023},
+  url = {https://github.com/atlassian/react-sweet-state},
+  note = {Online; accessed on 27-November-2023}
+}
+
+@online{mui-chip,
+  title = {MUI Chip},
+  year = {2023},
+  url = {https://mui.com/material-ui/react-chip/#clickable},
+  note = {Online; accessed on 27-November-2023}
+}
+
+@online{mui-slider,
+  title = {MUI Slider},
+  year = {2023},
+  url = {https://mui.com/material-ui/react-slider/},
+  note = {Online; accessed on 27-November-2023}
+}
+
+
 
