--- a/bibliography.bib
+++ b/bibliography.bib
@@ -153,5 +153,29 @@ DOI = {10.2312/eurovisstar.20141177}
   note = {Online; accessed on 27-November-2023}
 }
 
+@article{Kersten2021TidyTA,
+  title={Tidy Tuples and Flying Start: fast compilation and fast execution of relational queries in Umbra},
+  author={Timo Kersten and Viktor Leis and Thomas Neumann},
+  journal={The VLDB Journal},
+  year={2021},
+  volume={30},
+  pages={883 - 905},
+  url={https://api.semanticscholar.org/CorpusID:221991407}
+}
 
-
+@article{GroupjoinAndNestedAggregates,
+author = {Fent, Philipp and Neumann, Thomas},
+title = {A Practical Approach to Groupjoin and Nested Aggregates},
+year = {2021},
+issue_date = {July 2021},
+publisher = {VLDB Endowment},
+volume = {14},
+number = {11},
+issn = {2150-8097},
+url = {https://doi.org/10.14778/3476249.3476288},
+doi = {10.14778/3476249.3476288},
+journal = {Proc. VLDB Endow.},
+month = {jul},
+pages = {2383–2396},
+numpages = {14}
+}
