--- a/bibliography.bib
+++ b/bibliography.bib
@@ -179,3 +179,43 @@ month = {jul},
 pages = {2383–2396},
 numpages = {14}
 }
+
+@article{efficiently-compiling,
+author = {Neumann, Thomas},
+title = {Efficiently Compiling Efficient Query Plans for Modern Hardware},
+year = {2011},
+issue_date = {June 2011},
+publisher = {VLDB Endowment},
+volume = {4},
+number = {9},
+issn = {2150-8097},
+url = {https://doi.org/10.14778/2002938.2002940},
+doi = {10.14778/2002938.2002940},
+journal = {Proc. VLDB Endow.},
+month = {jun},
+pages = {539–550},
+numpages = {12}
+}
+
+@inproceedings{generationOfMachineCode,
+author = {Funke, Henning and M\"{u}hlig, Jan and Teubner, Jens},
+title = {Efficient Generation of Machine Code for Query Compilers},
+year = {2020},
+isbn = {9781450380249},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3399666.3399925},
+doi = {10.1145/3399666.3399925},
+booktitle = {Proceedings of the 16th International Workshop on Data Management on New Hardware},
+articleno = {6},
+numpages = {7},
+location = {Portland, Oregon},
+series = {DaMoN '20}
+}
+
+@online{intel-turbo-boost,
+  title = {Intel Turbo-Boost},
+  year = {2023},
+  url = {https://www.intel.de/content/www/de/de/gaming/resources/turbo-boost.html},
+  note = {Online; accessed on 03-December-2023}
+}
