--- a/bibliography.bib
+++ b/bibliography.bib
@@ -219,3 +219,10 @@ series = {DaMoN '20}
   url = {https://www.intel.de/content/www/de/de/gaming/resources/turbo-boost.html},
   note = {Online; accessed on 03-December-2023}
 }
+
+@online{benchy,
+  title = {Benchy - The Database Benchmarker},
+  year = {2023},
+  url = {https://gitlab.db.in.tum.de/infra/db-benchmark},
+  note = {Online; accessed on 06-December-2023}
+}
