--- a/bibliography.bib
+++ b/bibliography.bib
@@ -226,3 +226,10 @@ series = {DaMoN '20}
   url = {https://gitlab.db.in.tum.de/infra/db-benchmark},
   note = {Online; accessed on 06-December-2023}
 }
+
+@online{dndkit,
+  title = {dnd kit},
+  year = {2023},
+  url = {https://dndkit.com/},
+  note = {Online; accessed on 07-December-2023}
+}
