--- a/bibliography.bib
+++ b/bibliography.bib
@@ -233,3 +233,41 @@ series = {DaMoN '20}
   url = {https://dndkit.com/},
   note = {Online; accessed on 07-December-2023}
 }
+
+@online{react,
+  title = {React},
+  year = {2023},
+  url = {https://react.dev/},
+  note = {Online; accessed on 10-December-2023}
+}
+
+@online{react-useState,
+  title = {React useState Hook},
+  year = {2023},
+  url = {https://react.dev/reference/react/useState},
+  note = {Online; accessed on 10-December-2023}
+}
+
+@online{react-hooks,
+  title = {React Hooks},
+  year = {2023},
+  url = {https://react.dev/reference/react/hooks},
+  note = {Online; accessed on 10-December-2023}
+}
+
+@online{react-virtual-dom,
+  title = {React Virtaul DOM},
+  year = {2023},
+  url = {https://legacy.reactjs.org/docs/faq-internals.html},
+  note = {Online; accessed on 10-December-2023}
+}
+
+@online{react-jsx,
+  title = {React JSX},
+  year = {2023},
+  url = {https://react.dev/learn/writing-markup-with-jsx},
+  note = {Online; accessed on 10-December-2023}
+}
+
+
+
