--- a/bibliography.bib
+++ b/bibliography.bib
@@ -269,5 +269,73 @@ series = {DaMoN '20}
   note = {Online; accessed on 10-December-2023}
 }
 
+@InProceedings{big-data,
+author="Mishra, Suchismita
+and Patnaik, Srikanta
+and Mishra, Bibhuti Bhusan",
+editor="Borah, Samarjeet
+and Mishra, Sambit Kumar
+and Mishra, Brojo Kishore
+and Balas, Valentina Emilia
+and Polkowski, Zdzislaw",
+title="Use of Big Data Analysis in Data Management Aspects",
+booktitle="Advances in Data Science and Management ",
+year="2022",
+publisher="Springer Nature Singapore",
+address="Singapore",
+isbn="978-981-16-5685-9"
+}
+
+@inproceedings{analyze-big-data-inside-dbms,
+author = {Ordonez, Carlos},
+title = {Can We Analyze Big Data inside a DBMS?},
+year = {2013},
+isbn = {9781450324120},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/2513190.2513198},
+doi = {10.1145/2513190.2513198},
+booktitle = {Proceedings of the Sixteenth International Workshop on Data Warehousing and OLAP},
+pages = {85–92},
+numpages = {8},
+keywords = {parallel algorithms, dbms, sql, mapreduce, big data},
+location = {San Francisco, California, USA},
+series = {DOLAP '13}
+}
+@InProceedings{literature-big-data,
+author="Elgendy, Nada
+and Elragal, Ahmed",
+editor="Perner, Petra",
+title="Big Data Analytics: A Literature Review Paper",
+booktitle="Advances in Data Mining. Applications and Theoretical Aspects",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="214--227",
+isbn="978-3-319-08976-8"
+}
+
+@mastersthesis{umbra-profiler-schworm,
+  author  = {Johann-Matthias Schworm},
+  school  = {Technical University of Munich},
+  title   = {Visualizing Performance Data of Compiling Database Systems},
+  year    = {2022}
+}
+
+@mastersthesis{umbra-profiler-schott,
+  author  = {Michael Schott},
+  school  = {Technical University of Munich},
+  title   = {Analyzing Performance Profiles of Compiling Database Systems with WebAssembly},
+  year    = {2022}
+}
+
+@inproceedings{umbra,
+  title={Umbra: A Disk-Based System with In-Memory Performance},
+  author={Thomas Neumann and Michael J. Freitag},
+  booktitle={Conference on Innovative Data Systems Research},
+  year={2020},
+  url={https://api.semanticscholar.org/CorpusID:209379505}
+}
+
 
 
