--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 
 \microtypesetup{protrusion=false}
 
-\addchap{Abbreviations}
+% \addchap{Abbreviations}
 \begin{acronym}
 	\itemsep-.25\baselineskip
 	\acro{TUM}[TUM]{Technical University of Munich}
@@ -65,7 +65,7 @@
 \end{acronym}
 
 \listoffigures{}
-\listoftables{}
+% \listoftables{}
 \microtypesetup{protrusion=true}
 \printbibliography{}
 
