--- a/pages/acknowledgments.tex
+++ b/pages/acknowledgments.tex
@@ -9,6 +9,10 @@
 
 \vspace{10mm}
 
-%TODO: Acknowledgments
+I extend my sincere gratitude to my advisor Maximilian Bandle for his invaluable guidance and unwavering support throughout this research journey. His prompt responses and willingness to assist at any time significantly enriched the quality of this work.
+
+I would also like to express my appreciation to Tom Papke for his generous assistance during the integration process of the Query Plan Visualizer. His expertise and collaborative spirit played a crucial role in enhancing the functionality of the Benchy Viewer.
+
+This research would not have been possible without the encouragement and support of these individuals, and I am truly thankful for their contributions to the successful completion of this thesis.
 
 \cleardoublepage{}
