--- a/pages/cover.tex
+++ b/pages/cover.tex
@@ -9,8 +9,8 @@
 
   \centering
 
-  \IfFileExists{logos/tum-\fg.pdf}{%
-    \includegraphics[height=20mm]{logos/tum-\fg.pdf}
+  \IfFileExists{logos/tum-logo.pdf}{%
+    \includegraphics[height=20mm]{logos/tum-logo.pdf}
   }{%
     \vspace*{20mm}
   }
